--- a/index.css
+++ b/index.css
@@ -153,7 +153,7 @@
 
   .botnav{
     background-color: #101010 ;
-    padding: 60px;
+    padding: 5%;
     font-family: Lato;
     font-size: 35px;
     color: white;
