--- a/admin.css
+++ b/admin.css
@@ -1,7 +1,6 @@
 body{
 	margin: 0;
 	padding: 0;
-	background: white;
 	background-size: cover;
 	background-position: cover;
 	font-family: sans-serif; 
@@ -14,7 +13,6 @@ body{
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
-	background: #191919;
 	text-align: center;
 }
 .box h1{
@@ -47,7 +45,7 @@ background-color: : #2ecc71;
 	display:block;
 	margin:20px auto;
 	text-align: center;
-	border:2px solid #2ecc71;
+	border:2px solid ;
 	padding: 14px 40px;
 	outline: none;
 	color:  white;
