--- a/admin.css
+++ b/admin.css
@@ -1,58 +1,46 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
+
+
 body{
-	margin: 0;
-	padding: 0;
-	background-size: cover;
-	background-position: cover;
-	font-family: sans-serif; 
+    margin: 0;
+    font-size: .9rem;
+    font-weight: 400;
+    line-height: 1.6;
+    color: #212529;
+    text-align: left;
+    background-color: #f5f8fa;
+}
 
+.navbar-laravel
+{
+    box-shadow: 0 2px 4px rgba(0,0,0,.04);
 }
-.box{
-	width: 400px;
-	padding: 200px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	text-align: center;
-}
-.box h1{
-	color:white;
-	text-transform: uppercase;
-	font-weight: 500;
 
+.navbar-brand , .nav-link, .my-form, .login-form
+{
+    font-family: Raleway, sans-serif;
 }
-.box input[type="text"],.box input[type="password"]{
-	border: 0;
-	background: none;
-	display:block;
-	margin: auto;
-	border:2px solid #3498db;
-	padding: 14px 10px;
-	width: 200px;
-	outline: none;
-	color:  white;
-	border-radius: 24px;
-	transition: 0.25s;
 
+.my-form
+{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
 }
-.box input[type="text"]:focus,.box input[type="password"]:focus{
-width: 280px;
-background-color: : #2ecc71;
+
+.my-form .row
+{
+    margin-left: 0;
+    margin-right: 0;
 }
-.box input[type='submit']{
-	border: 0;
-	background: none;
-	display:block;
-	margin:20px auto;
-	text-align: center;
-	border:2px solid ;
-	padding: 14px 40px;
-	outline: none;
-	color:  white;
-	border-radius: 24px;
-	transition: 0.25s;
-	cursor: pointer;
+
+.login-form
+{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
 }
-.box input[type="submit"]:hover{
-	background: #2ecc71;
+
+.login-form .row
+{
+    margin-left: 0;
+    margin-right: 0;
 }
